<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.DetailUserActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#03A9F4"
            android:layout_margin="6dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_avatar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="4dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/detail_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:textColor="#6D2B1E1E"
                    android:textSize="16sp"
                    android:typeface="serif"
                    tools:text="@string/username"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#03A9F4"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                style="@style/TextField1">

                <LinearLayout
                    style="@style/TextField2"
                    android:layout_marginRight="10dp">

                    <TextView
                        style="@style/TextContent"
                        android:text="@string/repository" />

                    <TextView
                        android:id="@+id/detail_repository"
                        style="@style/TextContent"
                        android:layout_height="wrap_content"
                        tools:text="@string/value" />
                </LinearLayout>

                <LinearLayout
                    style="@style/TextField2"
                    android:layout_marginRight="10dp">

                    <TextView
                        style="@style/TextContent"
                        android:text="@string/followers" />

                    <TextView
                        android:id="@+id/detail_followers"
                        style="@style/TextContent"
                        tools:text="@string/value" />
                </LinearLayout>

                <LinearLayout
                    style="@style/TextField2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextContent"
                        android:text="@string/following"/>

                    <TextView
                        android:id="@+id/detail_following"
                        style="@style/TextContent"
                        tools:text="@string/value" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <include
        android:id="@+id/includeTabLayout"
        layout="@layout/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/frameDetail"/>
</LinearLayout>